feat(todo): add todo
- Add environment configuration for different stages
- Integrate Playwright for end-to-end testing
- Implement Todo service for managing todos
- Enhance add-form component with validation and notifications
- Update todo-table component to display todos dynamically
- Add localization support for English and French
- Configure base URL interceptor for API requests

Refs: #1

--- a/src/assets/i18n/FR_fr.json
+++ b/src/assets/i18n/FR_fr.json
@@ -12,7 +12,9 @@
   },
   "addTodoForm": {
     "placeholder": "Nouvelle tâche...(ex: Appeler maman)",
-    "add": "Ajouter"
+    "add": "Ajouter",
+    "success": "Tâches créé avec succès !",
+    "error": "Erreur lors de la création. Réessayez."
   },
   "todoTable": {
     "header": {
