fix(i18n): correct singular form in success message for adding todo
Refs: #1

--- a/src/assets/i18n/FR_fr.json
+++ b/src/assets/i18n/FR_fr.json
@@ -13,7 +13,7 @@
   "addTodoForm": {
     "placeholder": "Nouvelle tâche...(ex: Appeler maman)",
     "add": "Ajouter",
-    "success": "Tâches créé avec succès !",
+    "success": "Tâche créé avec succès !",
     "error": "Erreur lors de la création. Réessayez."
   },
   "todoTable": {
