feat(todos): implement delete functionality, improve UI interactions & add e2e tests
Refs: #3

--- a/src/assets/i18n/FR_fr.json
+++ b/src/assets/i18n/FR_fr.json
@@ -31,7 +31,11 @@
       "btn": {
         "remove": {
           "edit": "Modifier",
-          "title": "Supprimer"
+          "title": "Supprimer",
+          "messages": {
+            "success": "La tâche a été supprimée avec succès.",
+            "error": "La suppression de la tâche a échoué. Veuillez réessayer."
+          }
         }
       }
     },
