fix(i18n): correct grammatical error in success message for editing todo title
Refs: #7

--- a/src/assets/i18n/FR_fr.json
+++ b/src/assets/i18n/FR_fr.json
@@ -44,7 +44,7 @@
         "editInput": {
           "ariaLabel": "Modifier le titre",
           "messages": {
-            "success": "Le tâche à été modifié avec succès !",
+            "success": "Le tâche a été modifié avec succès !",
             "error":"Une erreur est survenue lors de la modification du titre de la tâche."
           }
         }
