--- a/src/assets/i18n/FR_fr.json
+++ b/src/assets/i18n/FR_fr.json
@@ -44,7 +44,7 @@
         "editInput": {
           "ariaLabel": "Modifier le titre",
           "messages": {
-            "success": "Le tâche a été modifié avec succès !",
+            "success": "La tâche a été modifiée avec succès !",
             "error":"Une erreur est survenue lors de la modification du titre de la tâche."
           }
         }
