fix(i18n): fix typo in french translation of clear all success message
Refs: #11

--- a/src/assets/i18n/FR_fr.json
+++ b/src/assets/i18n/FR_fr.json
@@ -14,7 +14,7 @@
         "disabled": "Aucune tâche à supprimer"
       },
         "messages": {
-          "success": "Toutes vos tâches ont été supprimé avec succès !",
+          "success": "Toutes vos tâches ont été supprimées avec succès !",
           "error": "Une erreur est survenue lors de la suppression de toutes vos tâches. Réessayez."
         }
       }
