fix(todo, i18n, header): correct French translation typo and handle "delete all" action
- Correct typo in French success message
- Refresh todos and manage processing state when "delete all" is triggered

Refs: #11

--- a/src/assets/i18n/FR_fr.json
+++ b/src/assets/i18n/FR_fr.json
@@ -25,7 +25,7 @@
     "add": {
       "title": "Ajouter",
       "messages": {
-        "success": "Tâche créé avec succès !",
+        "success": "Tâche créée avec succès !",
         "error": "Erreur lors de la création. Réessayez."
       }
     }
