[#11] Add "delete all todos" functionality (#13)
* feat(todo): add "delete all todos" functionality

Refs: #11

* fix(i18n): fix typo in french translation of clear all success message

Refs: #11

* fix(todo): clear input field only after adding a todo

Refs: #11

* fix(e2e): wait for notification sequentially in  visibile & hidden states

Refs: #11

* feat(e2e): use translation string to locate 'Clear' button

Refs: #11

* fix(todo, i18n, header): correct French translation typo and handle "delete all" action

- Correct typo in French success message
- Refresh todos and manage processing state when "delete all" is triggered

Refs: #11

---------

Co-authored-by: idembele70 <idembele70@gmail>

--- a/src/assets/i18n/FR_fr.json
+++ b/src/assets/i18n/FR_fr.json
@@ -4,17 +4,31 @@
       "content": "Liste des tâches",
       "badge": "par @idembele70"
     },
-    "subTitle": "Ajoute, complète, édite, supprime.", 
-    "clear" : {
+    "subTitle": "Ajoute, complète, édite, supprime.",
+    "clear": {
       "completed": "Supprimer terminées",
-      "all": "Vider"
+      "all": {
+      "label": "Vider",
+      "title": {
+        "enabled": "Supprimer toutes les tâches",
+        "disabled": "Aucune tâche à supprimer"
+      },
+        "messages": {
+          "success": "Toutes vos tâches ont été supprimées avec succès !",
+          "error": "Une erreur est survenue lors de la suppression de toutes vos tâches. Réessayez."
+        }
+      }
     }
   },
   "addTodoForm": {
     "placeholder": "Nouvelle tâche...(ex: Appeler maman)",
-    "add": "Ajouter",
-    "success": "Tâche créé avec succès !",
-    "error": "Erreur lors de la création. Réessayez."
+    "add": {
+      "title": "Ajouter",
+      "messages": {
+        "success": "Tâche créée avec succès !",
+        "error": "Erreur lors de la création. Réessayez."
+      }
+    }
   },
   "todoTable": {
     "header": {
@@ -45,12 +59,12 @@
           "ariaLabel": "Modifier le titre",
           "messages": {
             "success": "La tâche a été modifiée avec succès !",
-            "error":"Une erreur est survenue lors de la modification du titre de la tâche."
+            "error": "Une erreur est survenue lors de la modification du titre de la tâche."
           }
         }
       },
       "btn": {
-        "edit" : {
+        "edit": {
           "title": "Modifier"
         },
         "remove": {
