fix(i18n): correct typo in clear completed todos success message for French translation
Refs: #14

--- a/src/assets/i18n/FR_fr.json
+++ b/src/assets/i18n/FR_fr.json
@@ -13,7 +13,7 @@
           "disabled": "Aucune tâche complétée à supprimer."
         },
         "messages": {
-          "success": "Toutes les tâches complétées ont étés supprimées !",
+          "success": "Toutes les tâches complétées ont été supprimées !",
           "error": "Une erreur est survenue lors de la suppression des tâches complétées. Réessayez."
         }
       },
