feat(todo): add "prevent creating duplicate todo" feature
Refs: #18

--- a/src/assets/i18n/FR_fr.json
+++ b/src/assets/i18n/FR_fr.json
@@ -37,6 +37,11 @@
         "messages": {
           "error": "Le titre ne peut pas contenir uniquement des espaces."
         }
+      },
+      "existing": {
+        "messages": {
+          "error": "Ce titre de tâche est déjà utilisé."
+        }
       }
     },
     "button": {
