feat(i18n): enable switching between French and English
Refs: #23

--- a/src/assets/i18n/FR_fr.json
+++ b/src/assets/i18n/FR_fr.json
@@ -5,6 +5,9 @@
       "badge": "par @idembele70"
     },
     "subTitle": "Ajoute, complète, édite, supprime.",
+    "select": {
+      "ariaLabel": "Sélection de langue"
+    },
     "clear": {
       "completed": {
         "label": "Supprimer terminées",
