fix(i18n): add error message for existing task title in addTodoForm
Refs: #23

--- a/src/assets/i18n/EN_us.json
+++ b/src/assets/i18n/EN_us.json
@@ -40,6 +40,11 @@
         "messages": {
           "error": "Title cannot contain only spaces."
         }
+      },
+      "existing": {
+        "messages": {
+          "error": "This task title is already in use."
+        }
       }
     },
     "button": {
